gcc/ 	PR rtl-optimization/42258 	* ira-lives.c (check_and_make_def_conflict): Ignore conflict for a 	use that may match DEF.

testsuite/
	PR rtl-optimization/42258
	* gcc.target/arm/thumb1-mul-moves.c: New test.




git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@157581 138bc75d-0d04-0410-961f-82ee72b054a4